force-app/main/default/objects/Payment__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &lt;= 0</errorConditionFormula>
    <errorMessage>Payment must be greater than zero.</errorMessage>
</ValidationRule>